--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,12 @@
-
 -r docs/requirements.txt
 -r requirements.txt
+
 black
 codecov
 
 flake8
 isort
 
-pytest
+pytest >= 3.3.0
 pytest-cov
 pytest-xdist
