--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,16 @@ allow_split_before_dict_value = false
 
 [flake8]
 exclude = */migrations/*,*/south_migrations/*
+max-line-length = 100
+ignore =
+  # W503: line break before binary operator
+  W503,
+
+  # W504: line break after binary operator
+  W504,
+
+  # C901: is too complex
+  C901,
 
 [isort]
 line_length = 100
