--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,43 +1,58 @@
--   repo: local
+exclude: >
+  (?x)^(
+  docs|
+  Makefile
+  )
+
+repos:
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: "3.7.7"
     hooks:
-    -   id: flake8-with-builtins
-        name: flake8-with-builtins
-        entry: flake8
-        language: python
-        files: \.py$
-        language_version: python3
-        additional_dependencies: ['flake8-builtins']
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    sha: v0.7.1
+    - id: flake8
+      name: flake8
+      language: python
+      files: \.py$
+      language_version: python3
+      exclude: tests
+      additional_dependencies: ['flake8-builtins']
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    sha: "v0.7.1"
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-merge-conflict
-    -   id: debug-statements
-        language: python
-        language_version: python3
-    -   id: requirements-txt-fixer
-    -   id: name-tests-test
-        args: ['--django']
--   repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
-    sha: v1.0.3
-    hooks:
-    -   id: python-bandit-vulnerability-check
-        args: [--ignore-nosec, -f, screen, -iii, -lll, -x, tests, --recursive, .]
-        files: .py$
--   repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    sha: v1.1.0
-    hooks:
-    -   id: python-safety-dependencies-check
-        language: python
-        language_version: python3
--   repo: https://github.com/pre-commit/mirrors-isort
+    - id: trailing-whitespace
+    - id: end-of-file-fixer
+    - id: check-merge-conflict
+    - id: debug-statements
+      language: python
+      language_version: python3
+    - id: requirements-txt-fixer
+    - id: name-tests-test
+      args: ['--django']
+
+  - repo: https://github.com/pre-commit/mirrors-isort
     sha: "v4.3.18"
     hooks:
-    -   id: isort
+    - id: isort
+      language: python
+      language_version: python3.6
 
--   repo: https://github.com/ambv/black
+  - repo: https://github.com/ambv/black
     rev: "19.3b0"
     hooks:
     - id: black
+      language: python
       language_version: python3.6
+
+  #- repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
+  #  sha: "v1.0.3"
+  #  hooks:
+  #  - id: python-bandit-vulnerability-check
+  #    args: [--ignore-nosec, -f, screen, -iii, -lll, -x, "tests,.eggs", --recursive, .]
+  #    files: .py$
+
+  #- repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+  #  sha: "v1.1.0"
+  #  hooks:
+  #  - id: python-safety-dependencies-check
+  #    language: python
+  #    language_version: python3
