--- a/setup.cfg
+++ b/setup.cfg
@@ -73,5 +73,5 @@ python_files =
     tests.py
 addopts =
     --tb=short
-    --cov-report=term-missing
-    --cov=ticts
+    #--cov-report=term-missing
+    #--cov=ticts
