Update license in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ classifier =
     Operating System :: MacOS :: MacOS X
     Operating System :: Microsoft :: Windows
     Operating System :: POSIX
-    License :: MIT license
+    License :: OSI Approved :: MIT License
     Programming Language :: Python
     Programming Language :: Python :: 3.6
 
