--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = arrow,pandas,pkg_resources,pytest,pytz,setuptools,sortedcontainers,sphinx_rtd_theme
+known_third_party = arrow,pkg_resources,pytest,pytz,setuptools,sortedcontainers,sphinx_rtd_theme
