--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ sudo: false
 
 language: python
 
+python:
+  - 3.6
+  - 3.5
+  - 3.7
+
 install:
   - pip install -U pip wheel
   - pip install -U -r requirements-dev.txt
@@ -31,7 +36,6 @@ jobs:
       script: pre-commit run --all-files --show-diff-on-failure
 
     - stage: deploy
-      python: 3.6
       script: skip
       install: skip
       before_install: skip
