fix(lint): run formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,9 @@ doc = [
 
 all = ["ticts[dev]", "ticts[doc]"]
 
+[tool.ruff]
+unsafe-fixes = true
+
 [tool.ruff.lint]
 select = [
   "E",   # pycodestyle
