--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,67 +1,18 @@
-exclude: >
-  (?x)^(
-  docs|
-  Makefile
-  )
+fail_fast: false
 
 repos:
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: "3.7.7"
+  - repo: local
     hooks:
-    - id: flake8
-      name: flake8
-      language: python
-      files: \.py$
-      language_version: python3
-      exclude: tests
-      additional_dependencies: ['flake8-builtins']
+      - id: lint
+        name: Lint
+        entry: make lint
+        types: [python]
+        language: system
+        pass_filenames: false
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    sha: "v0.7.1"
-    hooks:
-    - id: trailing-whitespace
-    - id: end-of-file-fixer
-    - id: check-merge-conflict
-    - id: debug-statements
-      language: python
-      language_version: python3
-    - id: requirements-txt-fixer
-    - id: name-tests-test
-      args: ['--django']
-
-  - repo: https://github.com/pre-commit/mirrors-isort
-    sha: "v4.3.20"
-    hooks:
-    - id: isort
-      language: python
-      language_version: python3.6
-
-  # seed isort to get consistent behaviour in CI
-  - repo: https://github.com/asottile/seed-isort-config
-    sha: "v1.9.0"
-    hooks:
-    - id: seed-isort-config
-      language: python
-      language_version: python3.6
-
-  - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: "v0.25.0"
-    hooks:
-    - id: yapf
-      args: [-i, -r]
-      language: python
-      language_version: python3.6
-
-  #- repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
-  #  sha: "v1.0.3"
-  #  hooks:
-  #  - id: python-bandit-vulnerability-check
-  #    args: [--ignore-nosec, -f, screen, -iii, -lll, -x, "tests,.eggs", --recursive, .]
-  #    files: .py$
-
-  #- repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-  #  sha: "v1.1.0"
-  #  hooks:
-  #  - id: python-safety-dependencies-check
-  #    language: python
-  #    language_version: python3
+      # - id: mypy
+      #   name: Mypy
+      #   entry: make mypy
+      #   types: [python]
+      #   language: system
+      #   pass_filenames: false
