--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu, macos, windows]
-        python-version: ["3.9", "3.10", "3.11"]
+        os: [ubuntu] # [ubuntu, macos, windows]
+        python-version: [3.10] #  ["3.9", "3.10", "3.11"]
 
     env:
       PYTHON: ${{ matrix.python-version }}
@@ -233,4 +233,3 @@ jobs:
           mkdocs gh-deploy
           --message "upt(doc): ${{ github.sha }}"
           --remote-branch=gh-pages
-
