--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       matrix:
         os: [ubuntu, macos, windows]
         python-version: ["3.9", "3.10", "3.11"]
-        pandas-version: ["1.4", "1.5", "2.0", "2.1", "2.2"]
+        pandas-version: ["1.5", "2.0", "2.2"]
 
     env:
       PYTHON: ${{ matrix.python-version }}
