--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   lint:
-    name: Lint (pre-commit)
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -42,13 +42,16 @@ jobs:
           extra_args: --all-files --verbose
 
   test:
-    name: pytest - py${{ matrix.python-version }} - pandas-${{ matrix.pandas-version }} - ${{ matrix.os }}
+    name: pytest - py${{ matrix.python-version }} - pd${{ matrix.pandas-version }} - ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu, macos, windows]
-        python-version: ["3.9", "3.10", "3.11"]
-        pandas-version: ["1.5", "2.0", "2.2"]
+        # os: [ubuntu, macos, windows]
+        # python-version: ["3.9", "3.10", "3.11"]
+        # pandas-version: ["1.5", "2.0", "2.2"]
+        os: [ubuntu]
+        python-version: ["3.9", "3.11"]
+        pandas-version: ["1.5"]
 
     env:
       PYTHON: ${{ matrix.python-version }}
@@ -91,13 +94,13 @@ jobs:
           CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}
 
       - name: Store coverage files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: coverage
 
   coverage-combine:
-    name: Coverage
+    name: coverage
     needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -108,7 +111,7 @@ jobs:
           python-version: "3.11"
 
       - name: Get coverage files
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: coverage
           path: coverage
@@ -121,13 +124,13 @@ jobs:
       - run: coverage html --show-contexts --title "ticts coverage for ${{ github.sha }}"
 
       - name: Store coverage html
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-html
           path: htmlcov
 
   docs:
-    name: Docs
+    name: docs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -161,7 +164,7 @@ jobs:
           --remote-branch=gh-pages
 
   publish-pypi:
-    name: Publish Pypi
+    name: publish pypi
     needs: [lint, test, docs]
     if: "success() && startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
@@ -191,7 +194,7 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
 
   deploy-docs:
-    name: Deploy docs on github pages
+    name: deploy docs on github pages
     needs: [lint, test, docs]
     if: "success() && startsWith(github.ref, 'refs/tags/')"
     runs-on: ubuntu-latest
