--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,13 +90,13 @@ jobs:
       - name: Test
         run: coverage run -m pytest -vv
         env:
-          COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}
-          CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}
+          COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
+          CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
 
       - name: Store coverage files
         uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-${{ matrix.os }}-${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
           path: coverage
 
   coverage-combine:
@@ -113,7 +113,8 @@ jobs:
       - name: Get coverage files
         uses: actions/download-artifact@v4
         with:
-          name: coverage
+          merge-multiple: true
+          pattern: coverage-*
           path: coverage
 
       - run: pip install coverage
