--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, macos, windows]
-        python-version: ["3.9", "3.10", "3.11"]
-        pandas-version: ["1.5", "2.0", "2.2"]
+        python-version: ["3.10"]
+        pandas-version: ["2.0"]
+        # python-version: ["3.9", "3.10", "3.11"]
+        # pandas-version: ["1.5", "2.0", "2.2"]
 
     env:
       PYTHON: ${{ matrix.python-version }}
