fix(ci): disable caching options for pytest on macos (#28)
* imp(ci): revise matrix for less jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,43 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu, macos, windows]
-        python-version: ["3.9", "3.10", "3.11"]
-        pandas-version: ["1.5", "2.0", "2.2"]
+        include:
+          - os: ubuntu
+            python-version: "3.9"
+            pandas-version: "1.5"
+          - os: ubuntu
+            python-version: "3.9"
+            pandas-version: "2.0"
+          - os: ubuntu
+            python-version: "3.9"
+            pandas-version: "2.2"
+
+          - os: ubuntu
+            python-version: "3.10"
+            pandas-version: "1.5"
+          - os: ubuntu
+            python-version: "3.10"
+            pandas-version: "2.0"
+          - os: ubuntu
+            python-version: "3.10"
+            pandas-version: "2.2"
+
+          - os: ubuntu
+            python-version: "3.11"
+            pandas-version: "1.5"
+          - os: ubuntu
+            python-version: "3.11"
+            pandas-version: "2.0"
+          - os: ubuntu
+            python-version: "3.11"
+            pandas-version: "2.2"
+
+          - os: windows
+            python-version: "3.11"
+            pandas-version: "2.2"
+          - os: macos
+            python-version: "3.11"
+            pandas-version: "2.2"
 
     env:
       PYTHON: ${{ matrix.python-version }}
@@ -75,7 +109,7 @@ jobs:
           key: pytest-${{ runner.os }}-python-${{ matrix.python-version }}-pandas-${{ matrix.pandas-version }}-${{ hashFiles('pyproject.toml') }}
 
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: ${{ matrix.os == 'macos' }} || (steps.cache.outputs.cache-hit != 'true')
         run: |
           pip install --editable .[dev]
           pip install pandas==${{ matrix.pandas-version }}
