fix: Implement overlay semantics for slice assignment (#32)
Fix slice assignment to use overlay semantics when value is a TimeSeries.
Previously, ts[start:end] += value would embed a TimeSeries or delete keys.
Now it correctly overlays values - only updating keys present in the value.

Key changes:
- **Overlay semantics**: Keep existing keys, only update from value TimeSeries
- **No key deletion**: Preserve all existing keys in range
- **No start marker**: Don't add start boundary (only update explicit keys)
- **End marker**: Add end timestamp only when needed to restore step function
- **Simpler logic**: Remove restrictive validations (allow empty value, no default requirement)

Tests:
- Convert all 13 tests to use inline-snapshot for maintainability
- Test overlay behavior, None bounds, empty values, boundary conditions
- All operator assignments (+=, -=, etc.) work correctly

Fixes #32

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,12 @@ dev = [
   #
   # testing libs:
   "coverage==7.4.*",
-  "pytest==8.1.*",
+  "pytest==8.4.*",
   "pytest-sugar==1.0.0",
   "pytest-mock==3.14.*",
   # "pytest-asyncio==0.23.*",
   # "dirty-equals",
+  "inline-snapshot==0.31.*",
   #
   # code quality:
   "pre-commit==3.7.*",
@@ -184,10 +185,17 @@ exclude_lines = [
 
 [tool.coverage.paths]
 source = [
-    'ticts/',
-    '/Users/runner/work/ticts/ticts/ticts/',
-    'D:\a\ticts\ticts\ticts',
+  'ticts/',
+  '/Users/runner/work/ticts/ticts/ticts/',
+  'D:\a\ticts\ticts\ticts',
 ]
+
+[tool.inline-snapshot]
+format-command = "ruff format --stdin-filename {filename}"
+
+[tool.inline-snapshot.shortcuts]
+review = ["review"]
+fix = ["create", "fix"]
 
 [tool.mypy]
 python_version = "3.11"
