--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,41 +47,31 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu
-            python-version: "3.9"
-            pandas-version: "1.5"
-          - os: ubuntu
-            python-version: "3.9"
-            pandas-version: "2.0"
-          - os: ubuntu
-            python-version: "3.9"
-            pandas-version: "2.2"
-
+          # Python 3.10: test old pandas versions
           - os: ubuntu
             python-version: "3.10"
             pandas-version: "1.5"
           - os: ubuntu
             python-version: "3.10"
             pandas-version: "2.0"
-          - os: ubuntu
-            python-version: "3.10"
-            pandas-version: "2.2"
 
-          - os: ubuntu
-            python-version: "3.11"
-            pandas-version: "1.5"
-          - os: ubuntu
-            python-version: "3.11"
-            pandas-version: "2.0"
+          # Python 3.11+: test recent pandas only
           - os: ubuntu
             python-version: "3.11"
             pandas-version: "2.2"
+          - os: ubuntu
+            python-version: "3.12"
+            pandas-version: "2.2"
+          - os: ubuntu
+            python-version: "3.13"
+            pandas-version: "2.3"
 
+          # Cross-platform on latest
           - os: windows
-            python-version: "3.11"
+            python-version: "3.12"
             pandas-version: "2.2"
           - os: macos
-            python-version: "3.11"
+            python-version: "3.13"
             pandas-version: "2.2"
 
     env:
@@ -113,6 +103,10 @@ jobs:
         run: |
           pip install --editable .[dev]
           pip install pandas==${{ matrix.pandas-version }}
+          if [[ "${{ matrix.pandas-version }}" == "1.5" || "${{ matrix.pandas-version }}" == "2.0" ]]; then
+            pip install "numpy<2"
+          fi
+        shell: bash
 
       - name: List deps
         run: pip freeze
