--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,56 +111,13 @@ jobs:
       - name: List deps
         run: pip freeze
 
-      - run: mkdir coverage
       - name: Test
         run: coverage run -m pytest -vv
-        env:
-          COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
-          CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
 
-      - name: Store coverage files
-        uses: actions/upload-artifact@v4
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          name: coverage-${{ matrix.os }}-${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
-          path: coverage
-
-  coverage-combine:
-    name: coverage
-    needs: [test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Get coverage files
-        uses: actions/download-artifact@v4
-        with:
-          merge-multiple: true
-          pattern: coverage-*
-          path: coverage
-
-      - run: pip install coverage
-
-      - name: Check coverage files exist
-        run: |
-          if [ ! -d coverage ] || [ -z "$(ls -A coverage)" ]; then
-            echo "No coverage files found"
-            exit 1
-          fi
-          ls -la coverage
-
-      - run: coverage combine coverage
-      - run: coverage report
-      - run: coverage html --show-contexts --title "ticts coverage for ${{ github.sha }}"
-
-      - name: Store coverage html
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-html
-          path: htmlcov
+          fail_ci_if_error: false
 
   docs:
     name: docs
