--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,41 +47,31 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu
-            python-version: "3.9"
-            pandas-version: "1.5"
-          - os: ubuntu
-            python-version: "3.9"
-            pandas-version: "2.0"
-          - os: ubuntu
-            python-version: "3.9"
-            pandas-version: "2.2"
-
+          # Python 3.10: test old pandas versions
           - os: ubuntu
             python-version: "3.10"
             pandas-version: "1.5"
           - os: ubuntu
             python-version: "3.10"
             pandas-version: "2.0"
-          - os: ubuntu
-            python-version: "3.10"
-            pandas-version: "2.2"
 
-          - os: ubuntu
-            python-version: "3.11"
-            pandas-version: "1.5"
-          - os: ubuntu
-            python-version: "3.11"
-            pandas-version: "2.0"
+          # Python 3.11+: test recent pandas only
           - os: ubuntu
             python-version: "3.11"
             pandas-version: "2.2"
+          - os: ubuntu
+            python-version: "3.12"
+            pandas-version: "2.2"
+          - os: ubuntu
+            python-version: "3.13"
+            pandas-version: "2.3"
 
+          # Cross-platform on latest
           - os: windows
-            python-version: "3.11"
+            python-version: "3.12"
             pandas-version: "2.2"
           - os: macos
-            python-version: "3.11"
+            python-version: "3.13"
             pandas-version: "2.2"
 
     env:
@@ -113,53 +103,21 @@ jobs:
         run: |
           pip install --editable .[dev]
           pip install pandas==${{ matrix.pandas-version }}
+          if [[ "${{ matrix.pandas-version }}" == "1.5" || "${{ matrix.pandas-version }}" == "2.0" ]]; then
+            pip install "numpy<2"
+          fi
+        shell: bash
 
       - name: List deps
         run: pip freeze
 
-      - run: mkdir coverage
       - name: Test
         run: coverage run -m pytest -vv
-        env:
-          COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
-          CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
 
-      - name: Store coverage files
-        uses: actions/upload-artifact@v4
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
         with:
-          name: coverage-${{ matrix.os }}-${{ matrix.python-version }}-pd${{ matrix.pandas-version }}
-          path: coverage
-
-  coverage-combine:
-    name: coverage
-    needs: [test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Get coverage files
-        uses: actions/download-artifact@v4
-        with:
-          merge-multiple: true
-          pattern: coverage-*
-          path: coverage
-
-      - run: pip install coverage
-
-      - run: ls -la coverage
-      - run: coverage combine coverage
-      - run: coverage report
-      - run: coverage html --show-contexts --title "ticts coverage for ${{ github.sha }}"
-
-      - name: Store coverage html
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-html
-          path: htmlcov
+          fail_ci_if_error: false
 
   docs:
     name: docs
