--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,15 +143,7 @@ jobs:
         run: pip install -e .[doc]
 
       - name: Build docs site
-        if: "!startsWith(github.ref, 'refs/tags/')"
         run: mkdocs build
-
-      - name: Publish docs site
-        if: "startsWith(github.ref, 'refs/tags/')"
-        run: >
-          mkdocs gh-deploy --force
-          --message "upt(doc): ${{ github.sha }}"
-          --remote-branch=gh-pages
 
   publish-pypi:
     name: publish pypi
@@ -208,8 +200,8 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: pip install -e .[doc]
 
-      - name: Build docs site
+      - name: Deploy docs site
         run: >
-          mkdocs gh-deploy
+          mkdocs gh-deploy --force
           --message "upt(doc): ${{ github.sha }}"
           --remote-branch=gh-pages
